# secS-magik

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: rust.yml
client/: Cargo.toml  README.md
client/src/: main.rs
core/: Cargo.toml  README.md
core/src/: caller_proof.rs  ffi.rs  ingress_request.rs  lib.rs  packet_builder.rs  response.rs  tunnel.rs
docs/: README.md  announcement-thread.md  client-surfaces.md  implementation-status.md  repository-schema.md
docs/issues/secs-magik-phases/: README.md  credential-summary-disclosure-boundary.md  demo-file-write-handler.md  m12-1-caller-proof-authentication.md  m12-2-caller-decision-response.md  m12-3-dregg-shaped-evidence-adapter.md  m12-4-tunnel-aead-aad-binding.md  m12-5-failclosed-clock-reads.md  m12-6-retire-decorative-mac.md  m12-7-supply-chain-ci-gate.md  m12-demoable-milestone.md  tier-1-dregg-authority-snapshot-smoke.md  track-e-trusted-issuer-root-policy.md  track-i-production-membership-provision-e2e.md
docs/ops/: demo-runbook.md  production-deployment-proof.md
docs/plans/: 2026-06-01-implementation-progress-checklist.md  2026-06-01-secs-magik-implementation-issue-slices.md  2026-06-02-ready-for-prod-checklist.md  README.md
docs/specs/: 2026-06-01-secs-magik-objectives-spec.md  README.md  dregg-authority-rail.md  dregg-live-source-client-contract.md  evidence-adapter-readiness-disclosure.md
examples/: README.md  hello-world.sh  m12-demo.sh  m12-tunnel-demo.sh  m13-permission-demo.sh  m15-dregg-authority-demo.sh
examples/m15-dregg-authority-demo/: README.md
examples/m15-dregg-authority-demo/web/: demo.js  index.html
fixtures/dregg/: david-lab-authority-snapshot.json  dregg-authority-registry.json
fixtures/trust/: membership-issuers.json
panel/: Cargo.toml  README.md
panel/src/: lib.rs
panel/www/: index.html  panel.js
permissions/: Cargo.toml
scripts/: README.md  check-m15-web-demo.py  production-gateway-smoke.sh  tier-1-dregg-authority-snapshot-smoke.sh
server/: Cargo.toml  README.md
server/src/: caller.rs  clock.rs  config.rs  dregg_authority.rs  dregg_live_source.rs  evidence.rs  file_write.rs  gateway.rs  identity.rs  ingress.rs  ledger.rs  lib.rs  manifest.rs  membership.rs  ontology.rs  payload.rs  permctl.rs  permissions.rs  public_audit.rs  public_audit_cli.rs  receipt.rs  runtime_mode.rs  schema.rs  verifier.rs
server/tests/: caller_auth.rs  client_surfaces_docs.rs  clock.rs  dregg_authority_evidence.rs  dregg_authority_registry.rs  dregg_live_contracts.rs  dregg_live_finality.rs  dregg_live_revocation.rs  dregg_live_source_client.rs  dregg_rotated_proof.rs  evidence.rs  file_write_handler.rs  gateway_layout.rs  identity.rs  ingress.rs  ledger.rs  manifest.rs  packet_opcode_regression.rs  payload_layout.rs  permctl.rs  permissioned_file_write_e2e.rs  permissions.rs  production_federated.rs  public_audit.rs  public_audit_cli.rs  public_audit_external_anchor.rs  readiness.rs  ready_for_prod_docs.rs  receipt.rs  runtime_config.rs  schema.rs  targeted_audit_hardening.rs  trust.rs  verifier_context.rs  wallet_challenge_contract.rs  wallet_presentation.rs
server/tests/support/: trust_fixtures.rs  wallet_fixtures.rs
