[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
libsec-core = { path = "../core" }
clap = { version = "4.4", features = ["derive", "env"] }
bincode = { workspace = true }
rand.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
sha2.workspace = true
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets"] }
