[package]
name = "panel"
version = "0.1.0"
edition = "2021"
description = "Vanilla WASM browser control panel for receiver-local secS permissions (M13.4b). wasm-bindgen wrapper over the shared secs-permissions model; the policy lives entirely in the browser."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
secs-permissions = { path = "../permissions" }
serde = { workspace = true }
serde_json = "1"
wasm-bindgen = "0.2"
