[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
libsec-core = { path = "../core" }
bincode.workspace = true
serde.workspace = true
ed25519-dalek.workspace = true
async-trait = "0.1.89"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
serial_test = "3.2"
